# -

./: .coverage  .gitignore  README.md  end  pyproject.toml
src/: __init__.py  counter_transactions.py  csv_excel.py  decorators.py  external_api.py  generators.py  main.py  main_transactions.py  masks.py  mylog.txt  processing.py  search_transactions.py  transactions.py  utils.py  widget.py
src/logs/: mylog.txt
tests/: conftest.py  mask_test.py  mylog.txt  test_conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_mask.py  test_processing.py  test_search_transactions.py  test_transaction_descriptions.py  test_transactions.py  test_utils.py  test_widget.py
