[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["s"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest = "^8.3.3"
openpyxl = "^3.1.5"


[tool.poetry.group.lint.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
